syntax = "proto3";

import "golem/error_body.proto";

package golem;

message ShardManagerError {
  oneof error {
    ErrorBody invalid_request = 1;
    ErrorBody timeout = 2;
    ErrorBody unknown = 3;
  }
}
